Finished the instructors' page and created a similar layout for the E-board.

--- a/eboard.html
+++ b/eboard.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>RPI Dance Club</title>
+        <title>E-Board</title>
         <link rel="icon" href="icon1.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
             <a class="navbar-brand" id="logo"><b>RPI Dance Club</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,6 +38,106 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <br>
+                <br>
+                <br>
+                <center>MEET THE OFFICERS</center>
+            </div>
+        </div>
+
+        <div id="instr-empty-space">
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <div id="off-photo-box">
+                        <br>
+                        <img src="robin.jpg" alt="Robin" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-7">
+                    <div id="off-text-box">
+                        <div id="off-name">
+                            <h4><b>HANNAH DE LOS SANTOS</b></h4>
+                            <i>President</i><br></div>
+                            <div id="off-desc">
+                                Hannah is a 4th-year PhD Student majoring in Computer Science. Her favorite styles of dance are ballet and lyrical. She has been dancing for six years. 
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <div id="off-photo-box">
+                        <br>
+                        <img src="louisa.jpg" alt="Louisa" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-7">
+                    <div id="off-text-box">
+                        <div id="off-name">
+                            <h4><b>ANIKA STRELOW</b></h4>
+                            <i>Showrunner</i><br></div>
+                            <div id="off-desc">
+                                waiting
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <div id="off-photo-box">
+                        <br>
+                        <img src="SeanClubPose.jpg" alt="Sean" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-7">
+                    <div id="off-text-box">
+                        <div id="off-name">
+                            <h4><b>LARISSA HENSCH</b></h4>
+                            <i>Treasurer</i><br></div>
+                            <div id="off-desc">
+                                waiting
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <div id="off-photo-box">
+                        <br>
+                        <img src="Gina.jpg" alt="Gina" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-7">
+                    <div id="off-text-box">
+                        <div id="off-name">
+                            <h4><b>ERICA BERTOLOZZI</b></h4>
+                            <i>Webmaster</i><br></div>
+                            <div id="off-desc">
+                                Erica is a junior majoring in Computer Science. Her favorite style of dance is hip hop. She has been dancing for six years.
+                            </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <center>Copyright &#169; 2019 RPI Dance Club</center>
+        </footer>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
