--- a/eboard.html
+++ b/eboard.html
@@ -140,5 +140,24 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script>
+            if ($(window).width() > 747) {
+                window.onscroll = function() {scrollFunction()};
+            }
+            
+            function scrollFunction() {
+                if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+                    document.getElementById("navbar").style.padding = "20px 10px";
+                    document.getElementById("logo").style.fontSize = "26px";
+                    document.getElementById("navbar").style.backgroundColor = "#2b2a2a";
+                    document.getElementById("logo").style.color = "#bd20bd";
+                } else {
+                    document.getElementById("navbar").style.padding = "40px 10px";
+                    document.getElementById("logo").style.fontSize = "30px";
+                    document.getElementById("navbar").style.backgroundColor = "transparent";
+                    document.getElementById("logo").style.color = "#bd20bd";
+                }
+            }
+        </script>
     </body>
 </html>
