centered descriptions when the screen size shrinks. Also started on contact us but not sure about layout.

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,31 @@
                 </ul>
             </div>
         </nav>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6" id="questions">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <h3>HAVE ANY QUESTIONS?</h3>
+                    <p>Shoot us an email at rpi</p>
+                </div>
+                
+                <div class="col-sm-6" id="social-media">
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <h3>FIND US ON SOCIAL MEDIA</h3>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <center>Copyright &#169; 2019 RPI Dance Club</center>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
