made an images folder and finished the contact us page

--- a/eboard.html
+++ b/eboard.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>E-Board</title>
-        <link rel="icon" href="icon1.png">
+        <link rel="icon" href="images\icon1.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -58,7 +58,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="robin.jpg" alt="Robin" height="150px" width="150px">
+                        <img src="images/robin.jpg" alt="Robin" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -78,7 +78,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="louisa.jpg" alt="Louisa" height="150px" width="150px">
+                        <img src="images/louisa.jpg" alt="Louisa" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -98,7 +98,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="SeanClubPose.jpg" alt="Sean" height="150px" width="150px">
+                        <img src="images/SeanClubPose.jpg" alt="Sean" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -118,7 +118,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="Gina.jpg" alt="Gina" height="150px" width="150px">
+                        <img src="images/Gina.jpg" alt="Gina" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
