--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contact Us</title>
-        <link rel="icon" href="icon1.png">
+        <link rel="icon" href="images\icon1.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
@@ -61,6 +61,9 @@
                 <textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea>
                 <br>
                 <input type="submit" class="form-control submit" value="SEND MESSAGE">
+                <br>
+                <br>
+                <br>
             </form>
             </center>
         </div>
