changed formatting when in mobile view but still needs work

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                 <br>
             </div>
         </div>
-
+        <div id="instr-empty-space">
+            <br>
+            <br>
+            <br>
+        </div>
         <div class="containter-fluid" id="info">
             <div class="row justify-content-md-center">
                 <div class="col-sm-4 mb-3" id="aboutus">
@@ -81,18 +85,16 @@
                 <div class="col-sm-4 mb-3" id="memberinfo">
                     <center><h4><b><u>MEMBER INFO</u></b></h4></center>
                     <center>
-                        The first week of classes is FREE!</br>
-                        For RPI students the semester fee is $65 for unlimited classes.</br>
-                        For Non-RPI students the unlimited class fee is $100.</br>
-                        All classes are held in the upstairs studios at the RPI Mueller Center.</br>
+                        &#9733;The first week of classes is FREE!<br>
+                        &#9733;For RPI students the semester fee is $65 for unlimited classes.<br>
+                        &#9733;For Non-RPI students the unlimited class fee is $100.<br>
+                        &#9733;All classes are held in the upstairs studios at the RPI Mueller Center.<br>
                     </center>
                     <br>
                 </div>
                 <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                    <ul class="list-style">
-                        <li>Classes start on <b>September 2nd</b>!</li>
-                    </ul>
+                        &#9733;Classes start on <b>September 2nd</b>!<br>
                 </div>
             </div>
         </div>
