Applying new suggestions

--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
             <div class="row justify-content-md-center">
                 <div class="col-sm-4 mb-3" id="aboutus">
                     <center><h4><b><u>ABOUT US</u></b></h4></center>
-                    <center><p>The Dance Club offers classes in ballet, contemporary, jazz, tap and hip hop. 
+                   <p>The Dance Club offers classes in ballet, contemporary, jazz, tap and hip hop. 
                         Classes are held weekly during the academic year. 
                         Every spring, we hold a recital in which dancers from each of the
-                        classes perform choreographed numbers. </p></center>
+                        classes perform choreographed numbers. </p>
                 </div>
                 <div class="col-sm-4 mb-3" id="memberinfo">
                     <center><h4><b><u>MEMBER INFO</u></b></h4></center>
-                    <center>
-                        &#9733; The first week of classes is FREE!<br>
-                        &#9733; For RPI students the semester fee is $65 for unlimited classes.<br>
-                        &#9733; For Non-RPI students the unlimited class fee is $100.<br>
-                        &#9733; All classes are held in the upstairs studios at the RPI Mueller Center.<br>
-                    </center>
+                    &#9733; The first week of classes is FREE!<br>
+                    &#9733; For RPI students the semester fee is $65 for unlimited classes.<br>
+                    &#9733; For Non-RPI students the unlimited class fee is $100.<br>
+                    &#9733; Payment is due by the end of the second week of classes (September 20th).<br>
+                    &#9733; All classes are held in the upstairs studios at the RPI Mueller Center, Room 3.<br>
                     <br>
                 </div>
                 <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                        &#9733; Classes start on <b>September 2nd</b>!<br>
+                        &#9733; Classes start on <b>September 9th</b>!<br>
+                        &#9733; Classes run from September 9th to December 6th!<br>
                 </div>
             </div>
         </div>
