--- a/schedule.html
+++ b/schedule.html
@@ -48,7 +48,7 @@
                             <br>
                             <br>
                             <br>
-                            <center><i>All classes are held in the upstairs studios at the RPI Mueller Center.</i></center><br>                            
+                            <center><i>All classes are held in the upstairs studios at the RPI Mueller Center, Room 3.</i></center><br>                            
                         </div>
                         <div id="class-times-box">
                             <center><h5><b>MONDAY</b></h5></center>
