--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                     <center><h4><b><u>MEMBER INFO</u></b></h4></center>
                     &#9733; The first week of classes is FREE!<br>
                     &#9733; For RPI students the semester fee is $65 for unlimited classes.<br>
-                    &#9733; For Non-RPI students the unlimited class fee is $100.<br>
+                    &#9733; For Non-RPI students the semester fee is $100 for unlimited classes.<br>
                     &#9733; Payment is due by the end of the second week of classes (September 20th).<br>
                     &#9733; All classes are held in the upstairs studios at the RPI Mueller Center, Room 3.<br>
                     <br>
                 </div>
                 <div class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                        &#9733; Classes start on <b>September 9th</b>!<br>
-                        &#9733; Classes run from September 9th to December 6th!<br>
+                        &#9733; Classes start on <b>September 9th.</b><br>
+                        &#9733; Classes run from September 9th to December 6th.<br>
                 </div>
             </div>
         </div>
@@ -109,9 +109,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script>
-            if ($(window).width() > 747) {
-                window.onscroll = function() {scrollFunction()};
-            }
+            window.onscroll = function() {scrollFunction()};
             
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
