--- a/class_desc.html
+++ b/class_desc.html
@@ -48,21 +48,33 @@
                         <br>
                         <br>
                         <h5><b>JAZZ</b></h5>
-                        <div id="desc_text">Jazz uses a base of ballet technique and then layers it with traditional jazz movements. These movements include kicks, leaps, and turns. The class structure is usually a warm up with stretching and strengthening exercises followed by across-the-floor progressions and combinations.</div><br>
+                        <div id="desc_text">
+                            <i>Instructor: Robin Gifford</i><br>
+                            Jazz uses a base of ballet technique and then layers it with traditional jazz movements. These movements include kicks, leaps, and turns. The class structure is usually a warm up with stretching and strengthening exercises followed by across-the-floor progressions and combinations.</div><br>
                         <h5><b>CONTEMPORARY BALLET</b></h5>
-                        <div id="desc_text">Contemporary Ballet is a mix of classical ballet and modern dance. It adapts ballet choreography to today by allowing a greater range of movement than the strict body lines of traditional ballet. This class starts off with a warm up of classical ballet and then combines it with modern dance to move the body in a variety of ways. The dances in this class combine emotions, technique, and the use of space for a beautiful end result.</div><br>
+                        <div id="desc_text">
+                            <i>Instructor: Louisa Barta</i><br>
+                            Contemporary Ballet is a mix of classical ballet and modern dance. It adapts ballet choreography to today by allowing a greater range of movement than the strict body lines of traditional ballet. This class starts off with a warm up of classical ballet and then combines it with modern dance to move the body in a variety of ways. The dances in this class combine emotions, technique, and the use of space for a beautiful end result.</div><br>
                         <h5><b>BALLET</b></h5>
-                        <div id="desc_text">Both the beginner and advanced ballet classes begin with exercises at the barre and then move to center for combinations that incorporate the movements practiced at barre in a more performance oriented fashion.<br>
+                        <div id="desc_text">
+                            <i>Instructor: Robin Gifford</i><br>
+                            Both the beginner and advanced ballet classes begin with exercises at the barre and then move to center for combinations that incorporate the movements practiced at barre in a more performance oriented fashion.<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i> Perfect for those who have no prior ballet training. More advanced students are also welcome.<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Advanced:</i> A class for students who have prior ballet experience, or have taken the beginner class at RPI.</div><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i> A class for students who have prior ballet experience, or have taken the beginner class at RPI.</div><br>
                         <h5><b>HIP HOP</b></h5>
-                        <div id="desc_text">This class will introduce students to the history of Hip Hop culture with basic moves and original choreography in order to build stamina and increase musicality. Each class begins with a warm up and stretch followed by across the floor and a short combo set to hip hop music. Each class will focus on different hip hop styles, breaking, dancehall, and traditional hip hop moves to develop body balance and coordination.<br>
+                        <div id="desc_text">
+                            <i>Instructor: Sean J. Iacopelli</i><br>
+                            This class will introduce students to the history of Hip Hop culture with basic moves and original choreography in order to build stamina and increase musicality. Each class begins with a warm up and stretch followed by across the floor and a short combo set to hip hop music. Each class will focus on different hip hop styles, breaking, dancehall, and traditional hip hop moves to develop body balance and coordination.<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Beginner:</i> No previous experience necessary just a willingness to have fun and let go!<br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Advanced:</i> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.</div><br>
-                        <h5><b>PRE-POINTE</b></h5>
-                        <div id="desc_text">Pre-pointe is a 1 hour ballet class that focuses on strengthening in preparation for pointe work. Even if you do not intend to go on pointe, it is still important to have strong ankles for regular ballet. Please do not go out and buy pointe shoes for this class, it is very dangerous without the proper training. If you already own pointe shoes and have trained in them before, you may wear them, otherwise please wear flat shoes.</div><br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9733;<i>Intermediate/Advanced:</i> This class moves at a faster pace than beginner hip hop and dancers are encouraged to have an intermediate to advanced background.</div><br>
+                        <h5><b>PRE-POINTE AND VARIATIONS</b></h5>
+                        <div id="desc_text">
+                            <i>Instructor: Rachel Toups</i><br>
+                            Pre-pointe is a 1 hour ballet class that focuses on strengthening in preparation for pointe work. Even if you do not intend to go on pointe, it is still important to have strong ankles for regular ballet. Please do not go out and buy pointe shoes for this class, it is very dangerous without the proper training. If you already own pointe shoes and have trained in them before, you may wear them, otherwise please wear flat shoes.</div><br>
                         <h5><b>TAP</b></h5>
-                        <div id="desc_text">Tap is based on tap shoes, which have a thick metal on the bottom that's used to make unique sounds. Students will learn coordination and terminology and then apply rhythm into a tap routine. The class will have a warm-up to properly loosen the ankles and knees and then move into center floor work.</div><br>
+                        <div id="desc_text">
+                            <i>Instructor: Gina Grasso</i><br>
+                            Tap is based on tap shoes, which have a thick metal on the bottom that's used to make unique sounds. Students will learn coordination and terminology and then apply rhythm into a tap routine. The class will have a warm-up to properly loosen the ankles and knees and then move into center floor work.</div><br>
                     </div>
                 </div>
             </div>        
@@ -73,10 +85,8 @@
         </footer>
 
         <script>
-            if ($(window).width() > 747) {
-                window.onscroll = function() {scrollFunction()};
-            }
-            
+            window.onscroll = function() {scrollFunction()};
+                        
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
                     document.getElementById("navbar").style.padding = "20px 10px";
