--- a/schedule.html
+++ b/schedule.html
@@ -56,15 +56,15 @@
                             <h6>Contemporary<span style="float: right">8:00-9:30 PM</span></h6><br>
                             <center><h5><b>TUESDAY</b></h5></center>
                             <h6>Beginner Ballet<span style="float: right">6:30-8:00 PM</span></h6>
-                            <h6>Advanced Ballet<span style="float: right">8:00-9:30 PM</span></h6><br>
+                            <h6>Intermediate/Advanced Ballet<span style="float: right">8:00-9:30 PM</span></h6><br>
                             <center><h5><b>WEDNESDAY</b></h5></center>
                             <h6>Beginner Hip Hop<span style="float: right">6:30-7:30 PM</span></h6>
-                            <h6>Advanced Hip Hop<span style="float: right">7:30-8:30 PM</span></h6><br>
+                            <h6>Intermediate/Advanced Hip Hop<span style="float: right">7:30-8:30 PM</span></h6><br>
                             <center><h5><b>THURSDAY</b></h5></center>
-                            <h6>Pre-Pointe<span style="float: right">6:30-7:30 PM</span></h6>
+                            <h6>Pre-Pointe and Variations<span style="float: right">6:30-7:30 PM</span></h6>
                             <h6>Tap<span style="float: right">7:30-8:30 PM</span></h6><br>
                             <center><h5><b>SUNDAY</b></h5></center>
-                            <h6>Make-Up Classes<span style="float: right">6:30-8:30 PM</span></h6>
+                            <h6>Make-Up Classes<span style="float: right">By Necessity</span></h6>
                         </div>
                     </div>
                 </div>
