updated aspect ratios and added new officer pictures!

--- a/eboard.html
+++ b/eboard.html
@@ -58,7 +58,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/blank.png" alt="Hannah" height="150px" width="150px">
+                        <img src="images/hannah.jpg" alt="Hannah" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -98,7 +98,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/blank.png" alt="Larissa" height="150px" width="150px">
+                        <img src="images/larissa.jpg" alt="Larissa" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -107,7 +107,7 @@
                             <h4><b>LARISSA HENSCH</b></h4>
                             <i>Treasurer</i><br></div>
                             <div id="off-desc">
-                                waiting
+                                Larissa is a sophomore majoring in Physics. Her favorite styles of dance are jazz, contemporary, and ballet. She has been dancing for one year.
                             </div>
                     </div>
                 </div>
