added officer emails to the eboard page and the club email to the contact us page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <br>
                     <br>
                     <h2>HAVE ANY QUESTIONS?</h2>
-                    <h5>Send us a message with the form below!</h5>
+                    <h5>Send us a message with the form below, <br>or shoot us an email at <b>dance_club@lists.rpi.edu!</b></h5>
                 </div>
             </div>
         </div>
