--- a/eboard.html
+++ b/eboard.html
@@ -67,7 +67,8 @@
                             <h4><b>HANNAH DE LOS SANTOS</b></h4>
                             <i>President</i><br></div>
                             <div id="off-desc">
-                                Hannah is a 4th-year PhD Student majoring in Computer Science. Her favorite styles of dance are ballet and lyrical. She has been dancing for six years. 
+                                Hannah is a 4th-year PhD Student majoring in Computer Science. Her favorite styles of dance are ballet and lyrical. She has been dancing for six years.<br>
+                                <i>&#9733; Email: delosh@rpi.edu</i>
                             </div>
                     </div>
                 </div>
@@ -87,7 +88,8 @@
                             <h4><b>ANIKA STRELOW</b></h4>
                             <i>Showrunner</i><br></div>
                             <div id="off-desc">
-                                waiting
+                                waiting<br>
+                                <i>&#9733; Email: strela@rpi.edu</i>
                             </div>
                     </div>
                 </div>
@@ -107,7 +109,8 @@
                             <h4><b>LARISSA HENSCH</b></h4>
                             <i>Treasurer</i><br></div>
                             <div id="off-desc">
-                                Larissa is a sophomore majoring in Physics. Her favorite styles of dance are jazz, contemporary, and ballet. She has been dancing for one year.
+                                Larissa is a sophomore majoring in Physics. Her favorite styles of dance are jazz, contemporary, and ballet. She has been dancing for one year.<br>
+                                <i>&#9733; Email: henscl@rpi.edu</i>
                             </div>
                     </div>
                 </div>
@@ -127,7 +130,8 @@
                             <h4><b>ERICA BERTOLOZZI</b></h4>
                             <i>Webmaster</i><br></div>
                             <div id="off-desc">
-                                Erica is a junior majoring in Computer Science. Her favorite style of dance is hip hop. She has been dancing for six years.
+                                Erica is a junior majoring in Computer Science. Her favorite style of dance is hip hop. She has been dancing for six years.<br>
+                                <i>&#9733; Email: bertoe@rpi.edu</i>
                             </div> 
                     </div>
                 </div>
