Added Anika's officer bio

--- a/eboard.html
+++ b/eboard.html
@@ -79,7 +79,7 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/blank.png" alt="Anika" height="150px" width="150px">
+                        <img src="images/anika.jpg" alt="Anika" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -88,7 +88,7 @@
                             <h4><b>ANIKA STRELOW</b></h4>
                             <i>Showrunner</i><br></div>
                             <div id="off-desc">
-                                waiting<br>
+                                Anika is a sophomore this year majoring in math major with minors in both finance and management. Her favorite style of dance is hiphop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
                                 <i>&#9733; Email: strela@rpi.edu</i>
                             </div>
                     </div>
@@ -130,7 +130,7 @@
                             <h4><b>ERICA BERTOLOZZI</b></h4>
                             <i>Webmaster</i><br></div>
                             <div id="off-desc">
-                                Erica is a junior majoring in Computer Science. Her favorite style of dance is hip hop. She has been dancing for six years.<br>
+                                Erica is a junior majoring in Computer Science. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
                                 <i>&#9733; Email: bertoe@rpi.edu</i>
                             </div> 
                     </div>
@@ -145,9 +145,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script>
-            if ($(window).width() > 747) {
-                window.onscroll = function() {scrollFunction()};
-            }
+
+            window.onscroll = function() {scrollFunction()};
             
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
