--- a/instructors.html
+++ b/instructors.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
                 <div class="row no-gutters">
                     <div class="col-sm-3">
                         <div id="instr-photo-box">
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club</center>
         </footer>
