--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id="recitalvideo">
+        <!-- <div class="container-fluid" id="recitalvideo">
             <center><h4><b>SPRING 2019 RECITAL VIDEO</b></h4></center>
-            <!--Learn how to embed a video in here-->
-        </div>        
+            <!--Learn how to embed a video in here
+        </div>-->
         <footer>
             <center>Copyright &#169; 2019 RPI Dance Club</center>
         </footer>
