Added photo credits to Demetrius and new photos for the slideshow

--- a/class_desc.html
+++ b/class_desc.html
@@ -81,7 +81,7 @@
         </div>
 
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club</center>
+            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
         </footer>
 
         <script>
