--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>RPI Dance Club Home</title>
+        <title>RPI Dance Club | Home</title>
         <link rel="icon" href="images/icon1.png">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
@@ -103,7 +103,7 @@
             <!--Learn how to embed a video in here
         </div>-->
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club</center>
+            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
