--- a/instructors.html
+++ b/instructors.html
@@ -98,7 +98,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/SeanClubPose.jpg" alt="Sean" height="150px" width="150px">
+                        <img src="images/sean.jpg" alt="Sean" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -118,7 +118,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/Gina.jpg" alt="Gina" height="150px" width="150px">
+                        <img src="images/gina.jpg" alt="Gina" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -154,7 +154,7 @@
                 </div>
             </div> -->
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club</center>
+            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
         </footer>
         
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
