--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
-    <body>
+    <body style="background-color: black;">
         <nav class="navbar navbar-expand-lg navbar-light" id="navbar">
             <a class="navbar-brand" id="logo"><b>RPI Dance Club</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,41 +38,58 @@
                 </ul>
             </div>
         </nav>
-
-        <div class="jumbotron jumbotron-fluid">
+        <!-- <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <br>
-                <br>
-                <br>
                 <center>DANCE CLUB FALL 2019</center>
                 <br>
                 <center>&#10507;</center>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>         
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
             </div>
+        </div> -->
+        <div class="carousel-caption">
+            <h1>DANCE CLUB FALL 2019</h1>
+            <center>&#10507;</center>
         </div>
-        <div id="instr-empty-space">
-            <br>
-            <br>
-            <br>
-        </div>
+        <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/1-ss.jpg"
+                  alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/2.jpg"
+                  alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/3.jpg"
+                  alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/4.jpg"
+                  alt="Fourth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/5.jpg"
+                  alt="Fifth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/6.jpg"
+                  alt="Sixth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/7.jpg"
+                  alt="Seventh slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselFade" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselFade" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
         <div class="containter-fluid" id="info">
             <div class="row justify-content-md-center">
                 <div class="col-sm-4 mb-3" id="aboutus">
