--- a/instructors.html
+++ b/instructors.html
@@ -127,7 +127,7 @@
                             <h4><b>GINA GRASSO</b></h4>
                             <i>Tap Instructor</i><br></div>
                             <div id="instr-desc">
-                                Gina Grasso has been tapping for 19 years. She grew up taking classes in Schenectady. Then she choreographed and taught classes during her undergraduate time at Yale. Since then she has taken classes in NYC and locally to continue to hone her skills.
+                                Gina has been tapping for 19 years. She grew up taking classes in Schenectady. Then she choreographed and taught classes during her undergraduate time at Yale. Since then she has taken classes in NYC and locally to continue to hone her skills.
                             </div> 
                     </div>
                 </div>
