Format of footer updated and link added to scroll to the bottom of the home page

--- a/class_desc.html
+++ b/class_desc.html
@@ -81,11 +81,14 @@
         </div>
 
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
+            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
-
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script>
-            window.onscroll = function() {scrollFunction()};
+            if ($(window).width() > 747) {
+                window.onscroll = function() {scrollFunction()};
+            }
                         
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
@@ -101,8 +104,5 @@
                 }
             }
         </script>
-
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </body>
 </html>
