--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             </center>
         </div>
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
+            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
