--- a/schedule.html
+++ b/schedule.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-sm-12" id="class-times">
                     <div style="text-align: center;">
-                        <div id="fees">
+                        <div id="class-location">
                             <br>
                             <br>
                             <br>
@@ -72,7 +72,7 @@
         </div>
 
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
+            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
