--- a/instructors.html
+++ b/instructors.html
@@ -154,7 +154,7 @@
                 </div>
             </div> -->
         <footer>
-            <center>Copyright &#169; 2019 RPI Dance Club. Photos by Demetrius Green.</center>
+            <center>Copyright &#169; 2019 RPI Dance Club ~ Photos by Demetrius Green</center>
         </footer>
         
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
