--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         </div>
         <div class="contact-form">
             <center>
-            <form id="contact-form" method="post" action="contact-form-handler.php">
+            <form id="contact-form" action="contact-form-handler.php" method="POST">
                 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
                 <br>
                 <input name="email" type="email" class="form-control" placeholder="Your Email" required>
